soup-uri: fix URI scheme parsing

The URI grammar allows a scheme to have digits in it after the first
character, and doesn't allow [.+-] in the first character.

https://bugzilla.gnome.org/show_bug.cgi?id=703776